--- a/index.html
+++ b/index.html
@@ -2,6 +2,14 @@
 <html lang="en">
   <head>
     <title>Lists Lab</title>
+    <h3>step for creating grilled cheese</h3>
+<ol>
+  <li>Spread butter on bread and frying pan</li>
+  <li>Place bread in frying pan and fry</li>
+  <li>Add cheese on top of bread</li>
+  <li>Cover with second slice of bread</li>
+  <li>Turn over and fry for 2 minutes</li>
+</ol>
   </head>
   <body>
     <!-- Write your HTML in this file -->
